# contributor-guide

./: .gitignore  .gitreview  .zuul.yaml  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: accounts.rst  code-and-documentation.rst  conf.py  git.rst  index.rst  irc.rst  setup-gerrit.rst  users.rst
doc/source/_extra/: .htaccess
doc/source/code-and-documentation/: devstack.rst  documentation.rst  elastic-recheck.rst  index.rst  introduction.rst  patch-best-practices.rst  patch-series-tutorial.rst  quick-start.rst  references-doc-contrib-guide.rst  sandbox-house-rules.rst  using-gerrit.rst
doc/source/common/: accounts.rst  communication.rst  dco.rst  events.rst  git.rst  governance.rst  i18n.rst  introduction.rst  irc.rst  mentoring.rst  releases.rst  setup-gerrit.rst  task-tracking.rst  zuul-status.rst
doc/source/contributing/: contributor-portal.rst  index.rst  intro.rst  organization-guide.rst
doc/source/locale/de/LC_MESSAGES/: doc-code-and-documentation.po  doc-common.po  doc-contributing.po  doc-non-code-contribution.po  doc-operators.po  doc-organizations.po  doc-users.po  doc.po
doc/source/locale/en_GB/LC_MESSAGES/: doc-code-and-documentation.po  doc-common.po  doc-contributing.po  doc-non-code-contribution.po  doc-operators.po  doc-organizations.po  doc-users.po  doc.po
doc/source/locale/es_MX/LC_MESSAGES/: doc.po
doc/source/locale/id/LC_MESSAGES/: doc-code-and-documentation.po  doc-common.po  doc-contributing.po  doc-non-code-contribution.po  doc-operators.po  doc-organizations.po  doc-users.po  doc.po
doc/source/locale/ko_KR/LC_MESSAGES/: doc-code-and-documentation.po  doc-common.po  doc-contributing.po  doc-non-code-contribution.po  doc-operators.po  doc-organizations.po  doc-users.po  doc.po
doc/source/locale/zh_CN/LC_MESSAGES/: doc-code-and-documentation.po  doc-common.po  doc-contributing.po  doc-non-code-contribution.po  doc-operators.po  doc-organizations.po  doc-users.po  doc.po
doc/source/non-code-contribution/: index.rst
doc/source/operators/: index.rst  introduction.rst  participate.rst  resources.rst
doc/source/organizations/: index.rst
doc/source/users/: index.rst  introduction.rst
